--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
 
     <audio class="audio" autoplay>
-        <source src="./Audio New York.mp3" autoplay="autoplay" type="audio/mp3">
+        <source src="./Audio New York.mp3" type="audio/mp3">
             Tu navegador no soporta audio HTML5.
     </audio>
     <main id="hero">
