--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <body>
     
 
-    <audio controls autoplay>
-        <source src="./Audio New York.mp3" type="audio/mp3">
+    <audio controls autoplay >
+        <source src="./Audio New York.mp3" autoplay="autoplay" type="audio/mp3">
             Tu navegador no soporta audio HTML5.
     </audio>
     <main id="hero">
