--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     
 
-    <audio class="audio" controls autoplay="autoplay" >
+    <audio class="audio" controls autoplay="true" >
         <source src="./Audio New York.mp3" autoplay="autoplay" type="audio/mp3">
             Tu navegador no soporta audio HTML5.
     </audio>
